feat: add car specification and change all relations
