# model/entity/car_entity.go
@@ -3,15 +3,17 @@ package entity
 import "time"
 
 type Car struct {
-	ID    uint   `gorm:"primaryKey;autoIncrement"`
-	Brand string `gorm:"not null;type:varchar(50)"`
-	Model string `gorm:"not null;type:varchar(50)"`
-	Year  int    `gorm:"not null;type:smallint"`
-	Image string `gorm:"not null"`
+	ID               uint             `gorm:"primaryKey;autoIncrement"`
+	BrandID          uint             `gorm:"not null"`
+	Model            string           `gorm:"not null;type:varchar(50)"`
+	Year             int16            `gorm:"not null;type:smallint"`
+	ImageUrl         string           `gorm:"not null;type:varchar(255)"`
+	CarSpecification CarSpecification `gorm:"foreignKey:CarID"`
+	CreatedAt        time.Time
+	UpdatedAt        time.Time
 	// Reviews     []Review `gorm:"foreignKey:CarID"`
 	// Ratings     []Rating `gorm:"foreignKey:CarID"`
 	// FavoritedBy []User   `gorm:"many2many:favorites;"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
 	// Review    Review `gorm:"foreignKey:CarID"`
+	Brand Brand `gorm:"foreignKey:BrandID"`
 }
