# model/entity/review_entity.go
@@ -8,6 +8,7 @@ type Review struct {
 	UserID    uint   `gorm:"not null;index:idx_car_id_user_id,unique"`
 	Title     string `gorm:"not null;type:varchar(100)"`
 	Content   string `gorm:"not null"`
+	ImageUrl  string `gorm:"not null"`
 	CreatedAt time.Time
 	UpdatedAt time.Time
 	User      User `gorm:"foreignKey:UserID"`
