# services/car_service.go
@@ -30,55 +30,80 @@ func NewCarService() CarService {
 func (service *carServiceImpl) Create(c *gin.Context, carCreateReq *request.CarCreateRequest) (*response.CarResponse, error) {
 	db, logger := helper.GetDBAndLogger(c)
 
-	var responseCar response.CarResponse
+	newCar := service.toCarEntity(carCreateReq)
 
-	newCar := entity.Car{
-		Brand: carCreateReq.Brand,
-		Model: carCreateReq.Model,
-		Year:  carCreateReq.Year,
-		Image: carCreateReq.Image,
-	}
-
-	if err := db.Model(&entity.Car{}).Create(&newCar).Take(&responseCar, "id = ?", newCar.ID).Error; err != nil {
+	if err := db.Create(newCar).Error; err != nil {
 		return nil, err
 	}
 
-	logger.Info("car created successfully", zap.Uint("carID", responseCar.ID))
+	logger.Info("car created successfully", zap.Uint("carID", newCar.ID))
 
-	return &responseCar, nil
+	return service.toCarResponse(newCar), nil
 }
 
 func (service *carServiceImpl) Update(c *gin.Context, carUpdateReq *request.CarUpdateRequest, carID uint) (*response.CarResponse, error) {
 	db, logger := helper.GetDBAndLogger(c)
 
-	var responseCar response.CarResponse
+	updateCar := service.toCarEntity(carUpdateReq)
 
-	result := db.Model(&entity.Car{}).Where("id = ?", carID).Updates(carUpdateReq).Take(&responseCar, "id = ?", carID)
+	var responseCar entity.Car
 
-	if result.Error != nil {
-		return nil, result.Error
-	}
+	err := db.Transaction(func(tx *gorm.DB) error {
+		result := db.Model(&entity.Car{}).Where("id = ?", carID).Updates(updateCar)
 
-	if result.RowsAffected == 0 {
-		return nil, exceptions.NewCustomError(http.StatusNotFound, "car not found")
+		if result.RowsAffected == 0 {
+			return exceptions.NewCustomError(http.StatusNotFound, "car not found")
+		}
+
+		if result.Error != nil {
+			return result.Error
+		}
+
+		if err := db.Model(&entity.CarSpecification{CarID: carID}).Where("car_id = ?", carID).Updates(updateCar.CarSpecification).Error; err != nil {
+			return err
+		}
+
+		if err := tx.Preload("CarSpecification").Take(&responseCar, "id = ?", carID).Error; err != nil {
+			return err
+		}
+
+		return nil
+	})
+
+	if err != nil {
+		return nil, err
 	}
 
 	logger.Info("car updated successfully", zap.Uint("carID", carID))
 
-	return &responseCar, nil
+	return service.toCarResponse(&responseCar), nil
 }
 
 func (service *carServiceImpl) Delete(c *gin.Context, carID uint) error {
 	db, logger := helper.GetDBAndLogger(c)
 
-	result := db.Where("id = ?", carID).Delete(&entity.Car{})
+	err := db.Transaction(func(tx *gorm.DB) error {
+		result := db.Model(&entity.CarSpecification{}).Where("car_id = ?", carID).Delete(&entity.CarSpecification{})
 
-	if result.Error != nil {
-		return result.Error
-	}
+		if result.Error != nil {
+			return result.Error
+		}
 
-	if result.RowsAffected == 0 {
-		return exceptions.NewCustomError(http.StatusNotFound, "car not found")
+		if result.RowsAffected == 0 {
+			return exceptions.NewCustomError(http.StatusNotFound, "car not found")
+		}
+
+		err := db.Where("id = ?", carID).Delete(&entity.Car{}).Error
+
+		if err != nil {
+			return err
+		}
+
+		return nil
+	})
+
+	if err != nil {
+		return err
 	}
 
 	logger.Info("car deleted successfully", zap.Uint("carID", carID))
@@ -89,26 +114,108 @@ func (service *carServiceImpl) Delete(c *gin.Context, carID uint) error {
 func (service *carServiceImpl) FindAll(c *gin.Context) (*[]response.CarResponse, error) {
 	db, _ := helper.GetDBAndLogger(c)
 
-	var responseCar []response.CarResponse
+	var cars []entity.Car
 
-	if err := db.Model(&entity.Car{}).Find(&responseCar).Error; err != nil {
+	if err := db.Preload("CarSpecification").Find(&cars).Error; err != nil {
 		return nil, err
 	}
 
-	return &responseCar, nil
+	var responseCars []response.CarResponse
+
+	for _, car := range cars {
+		responseCars = append(responseCars, *service.toCarResponse(&car))
+	}
+
+	return &responseCars, nil
 }
 
 func (service *carServiceImpl) FindByID(c *gin.Context, carId uint) (*response.CarResponse, error) {
 	db, _ := helper.GetDBAndLogger(c)
 
-	var responseCar response.CarResponse
+	var car entity.Car
 
-	if err := db.Model(&entity.Car{}).Take(&responseCar, "id = ?", carId).Error; err != nil {
+	if err := db.Preload("CarSpecification").Take(&car, "id = ?", carId).Error; err != nil {
 		if err == gorm.ErrRecordNotFound {
 			return nil, exceptions.NewCustomError(http.StatusNotFound, "car not found")
 		}
 		return nil, err
 	}
 
-	return &responseCar, nil
+	return service.toCarResponse(&car), nil
+}
+
+func (service *carServiceImpl) toCarResponse(car *entity.Car) *response.CarResponse {
+	return &response.CarResponse{
+		ID:                  car.ID,
+		BrandID:             car.BrandID,
+		Model:               car.Model,
+		Year:                car.Year,
+		ImageUrl:            car.ImageUrl,
+		Width:               car.CarSpecification.Dimension.Width,
+		Height:              car.CarSpecification.Dimension.Height,
+		Length:              car.CarSpecification.Dimension.Length,
+		Engine:              car.CarSpecification.Engine,
+		Torque:              car.CarSpecification.Torque,
+		Transmission:        car.CarSpecification.Transmission,
+		Acceleration:        car.CarSpecification.Acceleration,
+		HorsePower:          car.CarSpecification.HorsePower,
+		BreakingSystemFront: car.CarSpecification.BreakingSystem.Front,
+		BreakingSystemBack:  car.CarSpecification.BreakingSystem.Back,
+		Fuel:                car.CarSpecification.Fuel,
+	}
+}
+
+func (service *carServiceImpl) toCarEntity(req any) *entity.Car {
+	switch r := req.(type) {
+	case *request.CarCreateRequest:
+		return &entity.Car{
+			BrandID:  r.BrandID,
+			Model:    r.Model,
+			Year:     r.Year,
+			ImageUrl: r.ImageUrl,
+			CarSpecification: entity.CarSpecification{
+				Dimension: entity.CarDimension{
+					Length: r.Length,
+					Width:  r.Width,
+					Height: r.Height,
+				},
+				Engine:       r.Engine,
+				Torque:       r.Torque,
+				Transmission: r.Transmission,
+				Acceleration: r.Acceleration,
+				HorsePower:   r.HorsePower,
+				BreakingSystem: entity.CarBreakingSystem{
+					Front: r.BreakingSystemFront,
+					Back:  r.BreakingSystemBack,
+				},
+				Fuel: r.Fuel,
+			},
+		}
+	case *request.CarUpdateRequest:
+		return &entity.Car{
+			BrandID:  r.BrandID,
+			Model:    r.Model,
+			Year:     r.Year,
+			ImageUrl: r.ImageUrl,
+			CarSpecification: entity.CarSpecification{
+				Dimension: entity.CarDimension{
+					Length: r.Length,
+					Width:  r.Width,
+					Height: r.Height,
+				},
+				Engine:       r.Engine,
+				Torque:       r.Torque,
+				Transmission: r.Transmission,
+				Acceleration: r.Acceleration,
+				HorsePower:   r.HorsePower,
+				BreakingSystem: entity.CarBreakingSystem{
+					Front: r.BreakingSystemFront,
+					Back:  r.BreakingSystemBack,
+				},
+				Fuel: r.Fuel,
+			},
+		}
+	default:
+		return nil
+	}
 }
